avoid Building a command line with string concatenation